public enum EstadoComprobante
{
    Activo = 1,
    Anulado = 2
}
