public enum TipoComprobante
{
    Factura = 1,
    Boleta = 2,
    NotaDebito = 3,
    NotaCredito = 4
}
